Bug 401079 - No status entry to see only scheduled transactions in ledger view
Summary: No status entry to see only scheduled transactions in ledger view
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: file (other bugs)
Version First Reported In: 4.8.2
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-15 20:06 UTC by Ralf Habacker
Modified: 2019-08-29 00:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.3,5.0.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2018-11-15 20:06:08 UTC
The ledger view has a status combobox in the top right corner, which allows to select transactions by it's state like 'Any', 'imported' and so on.
It would be nice to have an entry added to filter only scheduled transactions.


STEPS TO REPRODUCE
1. start kmymoney
2. open ledger view
3. select the Status drop down list

OBSERVED RESULT
There is no entry named 'Scheduled'

EXPECTED RESULT
There should be an entry named 'Scheduled' to be able to see only scheduled transactions.


ADDITIONAL INFORMATION
Comment 1 Jack 2018-11-15 20:29:05 UTC
Would you only want to be able to filter to future scheduled transactions, or also to see only past transactions that were entered through a schedule, as opposed to imported or manually entered?  (I'm not even sure that would be possible, but it seems like an interesting possibility.)
Comment 2 Ralf Habacker 2018-11-16 07:13:03 UTC
> Would you only want to be able to filter to future scheduled transactions
yes, because with using the feature implemented with bug 398919 scheduled transactions may not be all at the end of the ledger view.
Comment 3 Ralf Habacker 2018-11-16 07:14:07 UTC
review request is https://phabricator.kde.org/D16911
Comment 4 Ralf Habacker 2018-11-16 07:18:20 UTC
Git commit 849b5aef98d4a5787d642e576c681ec6d370bc5d by Ralf Habacker.
Committed on 16/11/2018 at 07:16.
Pushed by habacker into branch '4.8'.

Add status entry for showing scheduled transactions in ledger view

This is useful to see if any scheduled transaction has not been entered
especially in the case that the 'Display schedule transactions with planned
post date' is switched on.
FIXED-IN:4.8.3
Reviewed By: tbaumgart
Differential Revision: https://phabricator.kde.org/D16911

M  +2    -1    kmymoney/widgets/registeritem.h
M  +1    -0    kmymoney/widgets/registersearchline.cpp
M  +4    -0    kmymoney/widgets/transaction.cpp

https://commits.kde.org/kmymoney/849b5aef98d4a5787d642e576c681ec6d370bc5d
Comment 5 Ralf Habacker 2018-11-16 11:09:29 UTC
Git commit aceb7fde2d2b8c45f256ed34e8b64db1ce64346d by Ralf Habacker.
Committed on 16/11/2018 at 11:02.
Pushed by habacker into branch '4.8'.

Keep order of status drop down box entries in ledger view in sync with 5.x branch

Fixup of commit 849b5aef9.

M  +1    -1    kmymoney/widgets/registersearchline.cpp

https://commits.kde.org/kmymoney/aceb7fde2d2b8c45f256ed34e8b64db1ce64346d
Comment 6 Ralf Habacker 2018-11-16 11:13:56 UTC
Git commit af4ffb8913631d9b7b2224f9fe690f395120a53b by Ralf Habacker.
Committed on 16/11/2018 at 11:12.
Pushed by habacker into branch '5.0'.

Add status entry for showing scheduled transactions in ledger view

This is useful to see if any scheduled transaction has not been entered
especially in the case that the 'Display schedule transactions with planned
post date' is switched on.

Cherry-picked from commit 2502a10da/review D16911 and adjusted to branch 5.0.
FIXED-IN:4.8.3,5.0.3
Reviewed By: tbaumgart
Differential Revision: https://phabricator.kde.org/D16916

M  +1    -0    kmymoney/widgets/registersearchline.cpp
M  +4    -0    kmymoney/widgets/transaction.cpp
M  +2    -1    kmymoney/widgets/widgetenums.h

https://commits.kde.org/kmymoney/af4ffb8913631d9b7b2224f9fe690f395120a53b
Comment 7 Ralf Habacker 2018-11-16 11:26:58 UTC
Git commit c2056b2ac48b7bd43b61b1afc8114c3e4526b833 by Ralf Habacker.
Committed on 16/11/2018 at 11:06.
Pushed by habacker into branch '5.0'.

Add status entry for showing scheduled transactions in ledger view

This is useful to see if any scheduled transaction has not been entered
especially in the case that the 'Display schedule transactions with planned
post date' is switched on.

Cherry-picked from commit 2502a10da/review D16911 and adjusted to branch 5.0.
FIXED-IN:4.8.3,5.0.3
Reviewed By: tbaumgart
Differential Revision: https://phabricator.kde.org/D16916

M  +1    -0    kmymoney/widgets/registersearchline.cpp
M  +4    -0    kmymoney/widgets/transaction.cpp
M  +2    -1    kmymoney/widgets/widgetenums.h

https://commits.kde.org/kmymoney/c2056b2ac48b7bd43b61b1afc8114c3e4526b833