Add status entry for showing scheduled transactions in ledger view

This is useful to see if any scheduled transaction has not been entered
especially in the case that the 'Display schedule transactions with planned
post date' is switched on.

BUG:401079
FIXED-IN:4.8.3
Reviewed By: tbaumgart
Differential Revision: https://phabricator.kde.org/D16911