kmymoney/widgets/transaction.cpp
@@ -659,6 +659,10 @@ bool Transaction::matches(const RegisterFilter& filter) const
         if (split().reconcileFlag() != MyMoneySplit::Cleared)
           return false;
         break;
+      case RegisterFilter::Scheduled:
+        if (!isScheduled())
+          return false;
+        break;
     }
   }
 
